--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:design:28.0.0'
     implementation files('libs/jsoup-1.12.1.jar')
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //이미지 로딩 라이브러리
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 apply plugin: 'com.google.gms.google-services'
