--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,16 @@
         <activity android:name=".ChatActivity" />
         <activity android:name=".MakeChatRoomActivity" />
         <activity android:name=".BookRecommendActivity" />
+        android:theme="@style/AppTheme">
+        <activity android:name=".Board.WriteActivity"></activity>
+        <activity android:name=".Board.RetouchBoardActivity"/>
+        <activity android:name=".Board.SearchBoardActivity"/>
+        <activity android:name=".BookRecommendActivity" />
         <activity android:name=".UserInfoActivity" />
         <activity android:name=".BookMaratonActivity" />
+        <activity android:name=".Board.BookBoardActivity" />
+        <activity android:name=".Board.BoardResultActivity"/>
+        <activity android:name=".Board.MyBoardActivity"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
