--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,15 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+
+    // appcompat 오류 위해 추가한 것
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:exifinterface:28.0.0'
+    implementation 'com.android.support:animated-vector-drawable:28.0.0'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -31,6 +39,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation files('libs/jsoup-1.12.1.jar')
+    // 리사이클뷰 및 카드뷰
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
     //이미지 로딩 라이브러리
     implementation 'com.squareup.picasso:picasso:2.71828'
     //원형 이미지뷰 라이브러리
