--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,9 @@
         <activity android:name=".ChatActivity" />
         <activity android:name=".MakeChatRoomActivity" />
         <activity android:name=".BookRecommendActivity" />
-        android:theme="@style/AppTheme">
-        <activity android:name=".Board.WriteActivity"></activity>
+        <activity android:name=".Board.WriteActivity" />
         <activity android:name=".Board.RetouchBoardActivity"/>
         <activity android:name=".Board.SearchBoardActivity"/>
-        <activity android:name=".BookRecommendActivity" />
         <activity android:name=".UserInfoActivity" />
         <activity android:name=".BookMaratonActivity" />
         <activity android:name=".Board.BookBoardActivity" />
