--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation files('libs/jsoup-1.12.1.jar')
     // 리사이클뷰 및 카드뷰
@@ -46,7 +47,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //원형 이미지뷰 라이브러리
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation'com.firebaseui:firebase-ui-storage:2.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
