94찬종 수정 공지사항 추가, 승후니랑 부딪치는거 수정, 프레그먼트1 쪽 디자인 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity android:name=".BookMaraton.BookMaratonInfo" />
         <activity android:name=".UserInfoActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".NoticeActivity" />
+        <activity android:name=".NoticeResultActivity" />
+        <activity android:name=".WriteNoticeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
