--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation'com.firebaseui:firebase-ui-storage:2.0.1'
+    // 이미지 가져오기
+    implementation "gun0912.ted:tedpermission:2.1.0"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
