--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -31,12 +32,12 @@
         <activity android:name=".Board.MyBoardActivity" />
         <activity android:name=".BookMaraton.BookMaratonActivity" />
         <activity android:name=".BookMaraton.BookMaratonInfo" />
-        <activity android:name=".UserInfoActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".Board.WriteBookActivity" />
         <activity android:name=".NoticeActivity" />
-        <activity android:name=".NoticeResultActivity" />
         <activity android:name=".WriteNoticeActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
