922 디자인 수정, 인터파크 도서안의 내용 확인 가능2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".BookMaraton.BookMaratonActivity" />
         <activity android:name=".BookMaraton.BookMaratonInfo" />
         <activity android:name=".Board.WriteBookActivity" />
+        <activity android:name=".BookInfoActivity"/>
         <activity android:name=".NoticeActivity" />
         <activity android:name=".WriteNoticeActivity" />
         <activity android:name=".AccountActivity" />
