--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         tools:replace="android:appComponentFactory">
         <activity android:name=".MyChatActivity"></activity>
         <activity android:name=".ChatActivity" />
-        <activity android:name=".BookMaraton.BookMaratonHistory_info" />
-        <activity android:name=".BookMaraton.BookMaratonHistory" />
+        <activity android:name=".BookMaraton.BookMaratonHistoryInfoActivity" />
         <activity android:name=".MakeChatRoomActivity" />
         <activity android:name=".BookRecommendActivity" />
         <activity android:name=".Board.WriteActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
@@ -30,8 +29,9 @@
         <activity android:name=".Board.RecommendBoardActivity"/>
         <activity android:name=".Board.BoardResultActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity android:name=".Board.MyBoardActivity" />
+        <activity android:name=".Board.RetouchBoardActivity" />
         <activity android:name=".BookMaraton.BookMaratonActivity" />
-        <activity android:name=".BookMaraton.BookMaratonInfo" />
+
         <activity android:name=".Board.WriteBookActivity" />
         <activity android:name=".BookInfoActivity"/>
         <activity android:name=".NoticeActivity" />
