929 전체 받은거

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     // 이미지 가져오기
     implementation "gun0912.ted:tedpermission:2.1.0"
 
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
